test/fail/semicolon3.min
program
    number y := 2;
    number x;      $$ Should not have semicolon
start
    x := y;
end
